frontend/src/index.css
/* Styles for FAQ page */
.faq {
  padding-right: 10vh;
}

.wrapper {
  display: flex;
  height: 50vh;
  width: 100vw;
  justify-content: center;
  align-items: center;
  padding-top: 25vh;
}

.accordion {
  width: 600px;
}

.item {
  background-color: #fd7545;
  margin: 10px;
  padding: 5px;
  box-shadow: 3px 3px lightgray;
}

.question {
  color: #2f2f2f;
  padding: 5px;
  font-size: 15pt;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

.answer {
  color: white;
  font-weight: bold;
  max-height: 0;
  overflow: hidden;
  transition: all 0s cubic-bezier(0, 1, 0, 1);
}

.answer.show {
  height: auto;
  padding: 5px;
  font-size: 15pt;
  max-height: 9999px;
  transition: all 0s cubic-bezier(1, 0, 1, 0);
}

/* Styling Registration Page */
.registration--form,
.login--form,
.form-tickets {
  width: 300px;
  margin: 2rem auto 5rem auto;
}

.registration--form div div {
  margin-bottom: 0.75rem;
}

.registration--form h2,
.login--form h2 {
  margin-bottom: 1rem;
}

.registration--form div p {
  margin-top: 0;
  padding-top: 0;
  margin-bottom: 1rem;
}

/* Styling for Contact Page */

.container {
  font-family: "Recursive", sans-serif;
}

.title {
  text-align: center;
  padding: 10vh;
}

.description {
  font-size: 18pt;
  text-align: center;
  padding-top: 5vh;
}

.icons {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(1, 1fr);
  text-align: center;
  padding-top: 20vh;
}

.icon {
  box-shadow: 2px 2px 2px 2px lightgrey;
  padding: 5px;
}

.icons div p {
  font-size: 15pt;
  padding: 10px;
}

.icon:active {
  box-shadow: none;
}
.event-container {
  text-align: center;
}
.seatmap,
.event-img {
  width: 400px;
  height: 300px;
  margin-bottom: 2rem;
}

/* Styling for About Page */
figcaption {
  margin-top: 1.5rem;
  font-size: 1.5rem;
}
.about--title {
  text-align: center;
  padding: 10vh;
  font-size: "6rem";
}

.about--images {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(1, 1fr);
  text-align: center;
}

.about--images img {
  width: 65%;
  height: 65%;
  border-radius: 50%;
  box-shadow: 2px 2px 2px 2px lightgrey;
}

.about--regexLogo {
  margin-top: 5vh;
  border-radius: 65%;
  box-shadow: 2px 2px 2px 2px lightgrey;
}

.about--description {
  font-size: 18pt;
  text-align: center;
  margin-bottom: 10vh;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
}

.about--description p {
  text-align: justify;
}
.about--button {
  text-align: center;
  margin-bottom: 10vh;
}

/*  PurchaseTickets.js  */
.indv-event-details-container {
  width: 50%;
  margin: 60px;
  float: left;
}

.indv-event-details-container h4 {
  font-family: "Recursive", sans-serif;
}

.seatmap {
  scale: 69%;
  margin-top: -69px;
}

.purchase-form {
  float: right;
  margin-top: 20vh;
  margin-right: 5vw;
  background-color: white;
  padding: 10px;
  width: 30%;
}

/* homepage */
.home-container {
  font-family: "Recursive", sans-serif;
  display: flex;
  flex-flow: row nowrap;
  justify-content: flex-start;
  align-items: flex-start;
  max-width: 100%;
  min-width: 80%;
  margin: 10px 20px 20px 20px;
}

.home-right {
  margin: 110px 5% 0 10%;
  width: 30%;
}

.home-left {
  width: 55%;
}

.home-title {
  padding: 10px;
  margin-left: 20px;
}
/* Display Ticket page */
.display-ticket {
  margin-left: 33%;
}

/* theme switching */

:root {
  --light: rgb(219, 219, 219);
  --dark: rgb(36, 36, 36);
  --orangeText: #ffa685;
}

body {
  background: var(--background-color);
  color: var(--text-color);
  transition: background 0.3s ease-in-out, color 0.6s ease-in-out;
}

body.light {
  --background-color: var(--light);
  --text-color: var(--dark);
}

body.dark {
  --background-color: var(--dark);
  --text-color: var(--light);
  --text-color: var(--orangeText);
}

